Fixed Nav Arrow Spacing

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -87,7 +87,7 @@ a:active {
 
 #navbarelements {
     z-index:2;
-    width:980px;
+    width:100%;
     height:28px;
     margin-right:auto;
     margin-left:auto;
@@ -96,11 +96,13 @@ a:active {
 }
 
 #panelelements {
+/*Note: contents of this container are not centered. Fix in future edits.*/
     z-index: 1;
     height:555px; 
-    width:980px;
+    width:960px;
     margin-right:auto;
     margin-left:auto;
+    text-align:center;
     /*border:1px solid #ffffff;*/
 }
 
@@ -134,7 +136,7 @@ a:active {
 	height: 10px;
 }
 #navstripe {
-	height: 28px;   
+	height: 28px;  
 }
 
 #bottomstripe {
@@ -195,16 +197,19 @@ a.navlink:active{
     background-color: rgba(255,255,255,0.4);
     text-align:center;
     overflow:hidden;
+
 }
 
 #narrow {
     width:860px;
-    left:60px;
+    display:inline-block;
+    float:left;
 }
 
 #wide {
     width:960px;
-    left:10px;
+    display:inline-block;
+    float:left;
 }
 
 .picinpanel {
@@ -214,11 +219,26 @@ a.navlink:active{
     display:inline-block;
 }
 
+.buttonspacer{
+    display:inline-block;
+    float:left;
+    width: 45px;
+    
+    height: 50%;
+    top:50%;
+    margin-top:-25px;
+   
+    color: #FFFFFF;
+    text-align:center;
+    /*border:1px solid #FFFFFF;*/
+}
+
 .arrow {
     width:0;
     height: 0;
     border-top:25px solid transparent;
     border-bottom:25px solid transparent;
+    display:inline-block;
     
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
@@ -335,6 +355,8 @@ a.navlink:active{
     margin-bottom:20px;
     margin-left: 100px;
     border: 1px solid #FFFFFF;
+    display:block;
+    text-align:left;
     
     padding-top: 50px;
     padding-left: 50px;
@@ -356,23 +378,11 @@ a.navlink:active{
     padding-top:10px;
 }
 
-.buttonspacer{
-    float:left;
-    height: 150px;
-    width: 60px;
-    padding-top:50px;
-    padding-left:15px;
-    padding-right:15px;
-    color: #FFFFFF;
-    line-height:160px;
-    text-align:center;
-}
-
 .articledef{
     float:left;
     height: 150px;
     width: 256px;
-    margin-left:12px;
-    margin-right:12px;
+    margin-left:16px;
+    margin-right:16px;
     border: 1px solid #FFFFFF;
 }
